--- a/sample_configs/imageserver.sample.ini
+++ b/sample_configs/imageserver.sample.ini
@@ -2,8 +2,5 @@
 images-path = /home/user/static/images
 cache-path  = /home/user/static/cache
 default-quality = 90
-allowed-sizes[] = 32x32
-allowed-sizes[] = 512x512
-allowed-qualities[] = 90
-allowed-qualities[] = 50
-allowed-qualities[] = 10
+allowed-sizes= 32x32,512x512
+allowed-qualities = 90,50,30
